Fix image size on mobile

--- a/clipboard-landing-page/src/scss/sections.scss
+++ b/clipboard-landing-page/src/scss/sections.scss
@@ -94,6 +94,8 @@
   margin-top: 186px;
 
   img {
+    width: auto;
+    height: 180px;
     margin-top: 65px;
   }
 }
